# module-pack

./: .gitignore  AGENTS.md  README.md  package.json  rebuild-zips.js
battery_fix/: build-ndk.bat  customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
battery_fix/src/: CMakeLists.txt  battery_daemon.c
camera_fix/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  system.prop
castorice_thermal/: service.sh
diagnostics_and_tools/: KERNEL_FIX_BLANK_SCREEN.md  display_debug.sh  find_mlock.sh  find_ntfs.sh  fix_now.sh  fix_thermal.sh  kernel_issue_collect.sh
display_color/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  system.prop
evanescia/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
fingerprint_speed/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
font_swap/: README.md  customize.sh  font_config.sh  module.prop  post-fs-data.sh  service.sh  system.prop
game_perftune/: build-ndk.bat  customize.sh  game_detect.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
game_perftune/src/: CMakeLists.txt  cpu_pinner.c  cpu_pinner.h  game_list.c  game_list.h  game_perftune.c  gpu_tuner.c  gpu_tuner.h  net_tuner.c  net_tuner.h
gps_fix/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
h_thermal/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
hyacine_fuse/: customize.sh  service.sh
hyacine_io/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh
kairitsu_safe/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  watchdog.sh
media_fix/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
multi_audio/: customize.sh  module.prop  post-fs-data.sh  service.sh
network_fix/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
network_fix/src/: CMakeLists.txt  build-ndk.bat  network_daemon.c
power_menu/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
speaker_boost/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
spoof_fierce/: README.md  SpoofFierce.json  api.sh  build-ndk.bat  build-online.sh  build-termux.sh  customize.sh  module.prop  post-fs-data.sh  scan_apps.sh  sepolicy.rule  service.sh
spoof_fierce/src/: CMakeLists.txt  CMakeLists_api.txt  api_handler.c  json_lite.c  json_lite.h  spoof_module.cpp  zygisk.hpp
statusbar_mod/: customize.sh  module.prop  post-fs-data.sh  service.sh  statusbar_config.sh  system.prop
storage_fix/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
touch_fix/: customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop
ui_enhance/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  system.prop
ui_enhance/src/: CMakeLists.txt  build-ndk.bat  ui_daemon.c
(+19 files in other folders)
